samples/ping/depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-deployment
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service-upstreams": "pong:9001"
    spec:
      containers:
      - name: ping
        image:  192.168.50.10:5000/ping:v1
        ports:
        - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: ping
spec:
  selector:
    app: ping
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
