samples/ping/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ping-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ping
spec:
  hosts:
  - "*"
  gateways:
  - ping-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: ping
        port:
          number: 9090
